Fix slider layout issues in production APK

--- a/app.json
+++ b/app.json
@@ -65,7 +65,8 @@
         {
           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone"
         }
-      ]
+      ],
+      "expo-router"
     ]
   }
 }
